[metadata]
name = typed-tree
version = attr: typedtree.version.__version__
author = Brett Alistair Kromkamp
author_email = brettkromkamp@gmail.com
description = TypedTree provides a tree structure that allows adding type information to its nodes and edges, respectively
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brettkromkamp/typed-tree
project_urls =
    Bug Tracker = https://github.com/brettkromkamp/typed-tree/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
